# parmail-extractor

./: .gitignore  Cargo.toml  Dockerfile  EPIC5_DELIVERABLES.txt  README.md  docker-compose.yml
scripts/: init-postgres.sql
src/: config.rs  handlers.rs  input.rs  main.rs  models.rs  ses.rs  sqs.rs  storage.rs
src/confirmer/: mod.rs
src/confirmer/templates/: confirm.txt  unknown_forwarder.txt
src/extractor/: extractor.rs
src_legacy/: email.rs  lib.rs  models.rs  s3.rs
src_legacy/extractor/: analysis.rs  mod.rs  output.rs  processor.rs  storage.rs  validate.rs
